--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-        <title>Keepgate</title>
+        <title>Keepgate • {% block title %}{% endblock %}</title>
     </head>
     <body>
-        <h1>Keepgate</h1>
+        {% block content %}{% endblock %}
     </body>
 </html>
