--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -1,14 +1,47 @@
 {% extends "base.html" %}
 {% block title %}Index{% endblock %}
 {% block content %}
-<div class="m-4">
-    <h1 class="text-4xl font-bold">Keepgate</h1>
-    <p class="text-sm uppercase">Logged in as {{ username }}</p>
-    <h2 class="mt-8 text-lg">Events</h2>
-    <ul>
-        {% for title, date in events %}
-            <li class="p-2 border border-gray-200">{{ title }} — {{ date }}</li>
-        {% endfor %}
-    </ul>
+<div class="mx-4 py-4 border-b flex items-center justify-between sticky top-0 bg-white">
+    <h1 class="text-3xl font-bold">Keepgate</h1>
+    <span class="flex-shrink-0 space-x-4">
+        <span class="text-sm uppercase">Logged in as <span class="font-bold">emsknock</span></span>
+        <a href="/logout" class="pointer text-sm uppercase px-4 py-2 text-white bg-red-500 hover:bg-red-400">Log out</a>
+    </span>
+</div>
+<div>
+    <article class="m-4">
+        <h2>Your events:</h2>
+        <ul class="mt-2 flex flex-col space-y-2">
+            <li class="flex space-x-8 items-center bg-gray-50 px-3 py-2 rounded">
+                <a href="#" class="text-blue-800 font-bold capitalize flex-grow">Sample event</a>
+                <span class="text-sm uppercase opacity-60">60 tickets</span>
+                <span class="text-sm uppercase opacity-60">40 passes</span>
+                <span class="text-sm uppercase opacity-60">3 organisers</span>
+                <span class="text-sm uppercase opacity-60">5.12.2021</span>
+            </li>
+        </ul>
+        <ul class="my-2 flex flex-col space-y-2">
+            <li class="flex space-x-8 items-center bg-gray-50 px-3 py-2 rounded">
+                <a href="#" class="text-blue-800 font-bold capitalize flex-grow">Sept 21 celebration</a>
+                <span class="text-sm uppercase opacity-60">50 tickets</span>
+                <span class="text-sm uppercase opacity-60">20 passes</span>
+                <span class="text-sm uppercase opacity-60">6 organisers</span>
+                <span class="text-sm uppercase opacity-60">21.9.2022</span>
+            </li>
+        </ul>
+        <h2>Events you are an organiser of:</h2>
+        <ul class="my-2 flex flex-col space-y-2">
+            <li class="flex space-x-8 items-center bg-gray-50 px-3 py-2 rounded">
+                <span class="flex-grow flex items-center space-x-4">
+                    <a href="#" class="text-blue-800 font-bold capitalize">Pippalot</a>
+                    <span class="text-sm opacity-60">(emsknock)</span>
+                </span>
+                <span class="text-sm uppercase opacity-60">50 tickets</span>
+                <span class="text-sm uppercase opacity-60">20 passes</span>
+                <span class="text-sm uppercase opacity-60">6 organisers</span>
+                <span class="text-sm uppercase opacity-60">21.9.2022</span>
+            </li>
+        </ul>
+    </article>
 </div>
 {% endblock %}
