--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -5,7 +5,7 @@
     <h1 class="text-3xl font-bold">Keepgate</h1>
     <span class="flex-shrink-0 space-x-4">
         <span class="text-sm uppercase">Logged in as <span class="font-bold">emsknock</span></span>
-        <a href="/logout" class="pointer text-sm uppercase px-4 py-2 text-white bg-red-500 hover:bg-red-400">Log out</a>
+        <a href="/logout" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-red-500 hover:bg-red-400">Log out</a>
     </span>
 </div>
 <div>
