--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         </p>
         <p class="mt-4 flex space-x-2">
             <a href="/signup" class="pointer text-sm uppercase w-2/4 px-4 py-2 rounded text-center text-white bg-blue-500 hover:bg-blue-400">Sign up</a>
-            <a href="/login" class="pointer text-sm uppercase w-2/4 px-4 py-2 rounded text-center text-white bg-green-500 hover:bg-green-400">Log in</a>
+            <a href="/signin" class="pointer text-sm uppercase w-2/4 px-4 py-2 rounded text-center text-white bg-green-500 hover:bg-green-400">Sign in</a>
         </p>
     </div>
 </div>
