--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Sign in{% endblock %}
 {% block content %}
 <div class="w-screen h-screen flex justify-center items-center">
     <div class="px-5 py-4 bg-gray-50 rounded-lg w-2/4">
