--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,13 +15,13 @@
                 <div class="text-sm uppercase mb-1 opacity-60">Username</div>
                 <input type="text" id="username" autocomplete="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
-            <label for="password">
+            <label for="new-password">
                 <div class="text-sm uppercase mb-1 opacity-60">Password</div>
-                <input type="password" id="password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="password" id="new-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
-            <label for="password-check">
+            <label for="confirm-password">
                 <div class="text-sm uppercase mb-1 opacity-60">Password again</div>
-                <input type="password-check" id="password-check" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="password-check" id="confirm-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <button type="submit" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
                 Create account
