--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}{{ username }}{% endblock %}
 {% block content %}
 <div class="mx-4 py-4 border-b flex items-center justify-between sticky top-0 bg-white">
     <h1 class="text-3xl font-bold">Keepgate</h1>
     <span class="flex-shrink-0 space-x-4">
-        <span class="text-sm uppercase">Signed in as <span class="font-bold">emsknock</span></span>
+        <span class="text-sm uppercase">Signed in as <span class="font-bold">{{ username }}</span></span>
         <a href="/signout" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-red-500 hover:bg-red-400">Sign out</a>
     </span>
 </div>
