--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,14 +10,14 @@
             </h1>
             <a href="/signup" class="pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign up</a>
         </div>
-        <form action="/signin" class="flex flex-col space-y-4 py-2 border-t">
+        <form action="/signin" method="post" class="flex flex-col space-y-4 py-2 border-t">
             <label for="username">
                 <div class="text-sm uppercase mb-1 opacity-60">Username</div>
-                <input type="text" id="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="text" id="username" name="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <label for="password">
                 <div class="text-sm uppercase mb-1 opacity-60">Password</div>
-                <input type="password" id="password" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="password" id="password" name="password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <button type="submit" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
                 Sign in
