--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,18 +10,18 @@
             </h1>
             <a href="/signin" class="pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign in</a>
         </div>
-        <form action="/signup" class="flex flex-col space-y-4 py-2 border-t">
+        <form action="/signup" method="post" class="flex flex-col space-y-4 py-2 border-t">
             <label for="username">
                 <div class="text-sm uppercase mb-1 opacity-60">Username</div>
-                <input type="text" id="username" autocomplete="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="text" id="username" name="username" autocomplete="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <label for="new-password">
                 <div class="text-sm uppercase mb-1 opacity-60">Password</div>
-                <input type="password" id="new-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="password" id="new-password" name="new-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <label for="confirm-password">
                 <div class="text-sm uppercase mb-1 opacity-60">Password again</div>
-                <input type="password" id="confirm-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
+                <input type="password" id="confirm-password" name="confirm-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
             <button type="submit" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
                 Create account
