Fix `pointer` → `cursor-pointer`

--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -5,8 +5,8 @@
     <h1 class="text-3xl font-bold">Keepgate</h1>
     <span class="flex-shrink-0 space-x-4">
         <span class="text-sm uppercase">Signed in as <span class="font-bold">{{ username }}</span></span>
-        <a href="/event" class="pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">New event</a>
-        <a href="/signout" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-red-500 hover:bg-red-400">Sign out</a>
+        <a href="/event" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">New event</a>
+        <a href="/signout" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-white bg-red-500 hover:bg-red-400">Sign out</a>
     </span>
 </div>
 <div>
