--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
                 <span class="font-bold">Keepgate</span>
                 <span class="opacity-60">Sign in</span>
             </h1>
-            <a href="/signup" class="pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign up</a>
+            <a href="/signup" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign up</a>
         </div>
         <form action="/signin" method="post" class="flex flex-col space-y-4 py-2 border-t">
             <label for="username">
@@ -19,7 +19,7 @@
                 <div class="text-sm uppercase mb-1 opacity-60">Password</div>
                 <input type="password" id="password" name="password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
-            <button type="submit" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
+            <button type="submit" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
                 Sign in
             </button>
         </form>
