--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
                 <span class="font-bold">Keepgate</span>
                 <span class="opacity-60">Sign up</span>
             </h1>
-            <a href="/signin" class="pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign in</a>
+            <a href="/signin" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign in</a>
         </div>
         <form action="/signup" method="post" class="flex flex-col space-y-4 py-2 border-t">
             <label for="username">
@@ -23,7 +23,7 @@
                 <div class="text-sm uppercase mb-1 opacity-60">Password again</div>
                 <input type="password" id="confirm-password" name="confirm-password" autocomplete="new-password" class="px-3 py-2 w-full border border-gray-200 rounded" />
             </label>
-            <button type="submit" class="pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
+            <button type="submit" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-white bg-green-500 hover:bg-green-400">
                 Create account
             </button>
         </form>
