--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -13,20 +13,18 @@
     <article class="m-4">
         <h2>Your events:</h2>
         <ul class="my-2 flex flex-col space-y-2">
-            {% for id, title, date, extra_info, ticket_count in own_events %}
+            {% for id, title, date, extra_info, ticket_count, pass_count, organiser_count in own_events %}
                 <li class="flex space-x-8 items-center bg-gray-50 px-3 py-2 rounded">
                     <a href="#" class="text-blue-800 font-bold capitalize flex-grow">{{ title }}</a>
                     <span class="text-sm uppercase opacity-60">
-                        {% if ticket_count == 1 %}
-                            1 ticket
-                        {% else %}
-                            {{ ticket_count }} tickets 
-                        {% endif %}
+                        {% if ticket_count == 1 %} 1 ticket {% else %} {{ ticket_count }} tickets {% endif %}
                     </span>
-                    <!--
-                    <span class="text-sm uppercase opacity-60">40 passes</span>
-                    <span class="text-sm uppercase opacity-60">3 organisers</span>
-                    -->
+                    <span class="text-sm uppercase opacity-60">
+                        {% if pass_count == 1 %} 1 passes {% else %} {{ pass_count }} passes {% endif %}
+                    </span>
+                    <span class="text-sm uppercase opacity-60">
+                        {% if organiser_count == 1 %} 1 organiser {% else %} {{ organiser_count }} organisers {% endif %}
+                    </span>
                     <span class="text-sm uppercase opacity-60">
                         {% if date %}
                             {{ date }}
