--- a/templates/index_logged_in.html
+++ b/templates/index_logged_in.html
@@ -26,11 +26,7 @@
                         {% if organiser_count == 1 %} 1 organiser {% else %} {{ organiser_count }} organisers {% endif %}
                     </span>
                     <span class="text-sm uppercase opacity-60">
-                        {% if date %}
-                            {{ date }}
-                        {% else %}
-                            No date
-                        {% endif %}
+                        {% if date %} {{ date }} {% else %} No date {% endif %}
                     </span>
                 </li>
             {% endfor %}
