--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,18 @@
             <a href="/signin" class="cursor-pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">Sign in</a>
         </div>
         <form action="/signup" method="post" class="flex flex-col space-y-4 py-2 border-t">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <ul class="bg-red-400 text-white p-4 rounded">
+                        {% for message in messages %}
+                        <li >
+                            {% if message == "username_taken" %} Username already taken {% endif %}
+                            {% if message == "password_nomatch" %} Passwords don't match {% endif %}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
             <label for="username">
                 <div class="text-sm uppercase mb-1 opacity-60">Username</div>
                 <input type="text" id="username" name="username" autocomplete="username" class="px-3 py-2 w-full border border-gray-200 rounded" />
