--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/06e4f7a749.js" crossorigin="anonymous"></script>
         <title>Keepgate • {% block title %}{% endblock %}</title>
     </head>
     <body>
