--- a/templates/event_tickets.html
+++ b/templates/event_tickets.html
@@ -34,13 +34,13 @@
             <nav class="border-t pt-4 flex flex-col space-y-3">
                 <span class="flex items-center space-x-2 text-gray-600">
                     <i class="fas fa-circle fa-xs"></i>
-                    <span>Tickets</span>
+                    <span>Tickets ({{ event.ticket_count }})</span>
                 </span>
                 <a href="/event/{{ event.id }}/passes" class="flex items-center space-x-2 text-blue-800">
-                    <span>Passes</span>
+                    <span>Passes ({{ event.pass_count }})</span>
                 </a>
                 <a href="/event/{{ event.id }}/organisers" class="flex items-center space-x-2 text-blue-800">
-                    <span>Organisers</span>
+                    <span>Organisers ({{ event.organiser_count }})</span>
                 </a>
             </nav>
         </form>
