--- a/templates/event_tickets.html
+++ b/templates/event_tickets.html
@@ -69,7 +69,7 @@
                             <div class="flex items-center space-x-2">
                                 {% if ticket.stamped %}
                                     <i class="fas fa-certificate"></i>
-                                    <span>Stamped by {{ ticket.stamped_by }} at {{ ticket.stamped_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
+                                    <span>Stamped by {{ ticket.stamped_by_username }} at {{ ticket.stamped_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
                                 {% else %}
                                     <i class="fas fa-certificate opacity-40"></i>
                                     <span class="opacity-40">Ticket not yet stamped</span>
