--- a/templates/pass_management.html
+++ b/templates/pass_management.html
@@ -10,7 +10,7 @@
         </div>
     {% endif %}
     <form class="border-t pt-3 flex flex-col ">
-        <input type="number" id="value-delta" name="value-delta" min="1" max="10000"></input>
+        <input type="number" id="value-delta" name="value-delta" value="1" min="1" max="10000"></input>
         <button type="button" onClick="post(valueDelta.value)">Add</button>
         <button type="button" onClick="post(-valueDelta.value)">Deduct</button>
     </form>
