--- a/templates/event_passes.html
+++ b/templates/event_passes.html
@@ -66,6 +66,10 @@
                             <span class="flex-grow w-24"></span>
                         </summary>
                         <div class="mt-2 flex flex-col space-y-2">
+                            <div class="flex items-center space-x-2">
+                                <i class="far fa-clock"></i>
+                                <span>Created at {{ pass.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
+                            </div>
                             <form action="/pass/{{ pass.id }}" method="post">
                                 <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
                                 <textarea id="extra-info" name="extra-info" placeholder="Extra info for pass" rows="4" class="px-3 py-2 w-full border border-gray-200 rounded">{{ pass.extra_info if pass.extra_info else "" }}</textarea>
