--- a/templates/event_tickets.html
+++ b/templates/event_tickets.html
@@ -69,6 +69,10 @@
                         </summary>
                         <div class="mt-2 flex flex-col space-y-2">
                             <div class="flex items-center space-x-2">
+                                <i class="far fa-clock"></i>
+                                <span>Created at {{ ticket.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
+                            </div>
+                            <div class="flex items-center space-x-2">
                                 {% if ticket.stamped %}
                                     <i class="fas fa-certificate"></i>
                                     <span>Stamped by {{ ticket.stamped_by_username }} at {{ ticket.stamped_at.strftime("%Y-%m-%d %H:%M:%S") }}</span>
