--- a/templates/event_organisers.html
+++ b/templates/event_organisers.html
@@ -48,19 +48,33 @@
     </div>
     <div class="h-full flex-grow flex flex-col items-center overflow-x-scroll">
 
-        <form action="/event/{{ event.id }}/new-organiser">
+        <form action="/event/{{ event.id }}/organisers" method="post" class="my-8 text-lg">
             <input type="hidden" name="csrf" value="{{ session.csrf_token }}"></input>
-            <label for="new-organiser-username">
+            <label for="new-organiser-username" class="space-x-4 ">
                 <span>New organiser:</span>
-                <input type="text" id="new-organiser-username"></input>
+                <input type="text" id="new-organiser-username" name="new-organiser-username" placeholder="Username" class="ml-2 px-2 py-1 border border-gray-200 rounded"></input>
             </label>
-            <button type="submit" class="">
+            <button type="submit" class="ml-4 cursor-pointer text-sm uppercase px-4 py-2 rounded text-blue-800 bg-blue-50 hover:bg-blue-100">
                 Add
             </button>
         </form>
         <ul>
-            {% for pass in passes %}
-                <li>{{ pass.id }}</li>
+            {% for organiser in organisers %}
+                <li>
+                    <details class="bg-gray-50 px-3 py-2 rounded">
+                        <summary class="flex space-x-4 items-center cursor-pointer">
+                            <span class="font-mono text-blue-800 font-bold uppercase">{{ organiser.username }}</span>
+                            <span class="flex-grow w-20"></span>
+                            {#
+                            {% if ticket.user_id %} <i class="w-4 fas fa-lock"></i> {% else %} <span class="w-4"></span> {% endif %}
+                            {% if ticket.stamped %} <i class="w-4 fas fa-certificate"></i> {% else %} <span class="w-4"></span> {% endif %}
+                            #}
+                        </summary>
+                        <div class="mt-2 flex flex-col space-y-2">
+                            
+                        </div>
+                    </details>
+                </li>
             {% endfor %}
         </ul>
 
