--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -18,7 +18,8 @@
                             <li>
                                 {% if message == "username_taken" %} Username already taken {% endif %}
                                 {% if message == "password_nomatch" %} Passwords don't match {% endif %}
-                                {% if message == "credentials_too_long" } Username or password cannot be over 32 characters in length {% endif %}
+                                {% if message == "credentials_too_long" %} Username or password cannot be over 32 characters in length {% endif %}
+                                {% if message == "empty_credentials" %} Username or password cannot be empty {% endif %}
                             </li>
                         {% endfor %}
                     </ul>
