--- a/templates/event_passes.html
+++ b/templates/event_passes.html
@@ -43,7 +43,7 @@
                         </div>
                         <textarea id="extra-info" name="extra-info" rows="4" class="px-3 py-2 w-full border border-gray-200 rounded">{{ event.extra_info }}</textarea>
                     </label>
-                    <button type="button" onClick="deleteEvent()">Delete event</button>
+                    <button type="button" onClick="deleteEvent()" class="text-red-600">Delete event</button>
                 </div>
             </details>
             <nav class="border-t pt-4 flex flex-col space-y-3">
